# cowrie-api

./: Cargo.toml  Dockerfile  README.md  cowrie.cfg  docker-compose.yaml
.github/workflows/: docker-image.yml
src/: main.rs  parser.rs  state.rs
src/handlers/: attempts.rs  commands.rs  health.rs  mod.rs  sessions.rs  stats.rs
src/models/: event.rs  mod.rs  response.rs
